--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,31 +35,29 @@ def isE2E = project.getProperties().get("isE2E") == "true"
 
 apply plugin: "com.facebook.react"
 
-if (!isE2E) {
-    apply from: "../../node_modules/@sentry/react-native/sentry.gradle"
-    apply plugin: "io.sentry.android.gradle"
+apply from: "../../node_modules/@sentry/react-native/sentry.gradle"
+apply plugin: "io.sentry.android.gradle"
 
-    sentry {
-        ignoredBuildTypes = ["debug"]
-        // Enables or disables the automatic configuration of Native Symbols
-        // for Sentry. This executes sentry-cli automatically so
-        // you don't need to do it manually.
-        // Default is disabled.
-        uploadNativeSymbols = true
-        // Enables or disables the automatic upload of the app's native source code to Sentry.
-        // This executes sentry-cli with the --include-sources param automatically so
-        // you don't need to do it manually.
-        // This option has an effect only when [uploadNativeSymbols] is enabled.
-        // Default is disabled.
-        includeNativeSources = true
-        // `@sentry/react-native` ships with compatible `sentry-android`
-        // This option would install the latest version that ships with the SDK or SAGP (Sentry Android Gradle Plugin)
-        // which might be incompatible with the React Native SDK
-        // Enable auto-installation of Sentry components (sentry-android SDK and okhttp, timber and fragment integrations).
-        // Default is enabled.
-        autoInstallation {
-            enabled = false
-        }
+sentry {
+    ignoredBuildTypes = isE2E ? ["debug", "release"] : ["debug"]
+    // Enables or disables the automatic configuration of Native Symbols
+    // for Sentry. This executes sentry-cli automatically so
+    // you don't need to do it manually.
+    // Default is disabled.
+    uploadNativeSymbols = true
+    // Enables or disables the automatic upload of the app's native source code to Sentry.
+    // This executes sentry-cli with the --include-sources param automatically so
+    // you don't need to do it manually.
+    // This option has an effect only when [uploadNativeSymbols] is enabled.
+    // Default is disabled.
+    includeNativeSources = true
+    // `@sentry/react-native` ships with compatible `sentry-android`
+    // This option would install the latest version that ships with the SDK or SAGP (Sentry Android Gradle Plugin)
+    // which might be incompatible with the React Native SDK
+    // Enable auto-installation of Sentry components (sentry-android SDK and okhttp, timber and fragment integrations).
+    // Default is enabled.
+    autoInstallation {
+        enabled = false
     }
 }
 
@@ -106,11 +104,6 @@ react {
 	    //
 	    //   The list of flags to pass to the Hermes compiler. By default is "-O", "-output-source-map"
 	    // hermesFlags = ["-O", "-output-source-map"]
-	    //
-    // Added by install-expo-modules
-    entryFile = file(["node", "-e", "require('expo/scripts/resolveAppEntry')", rootDir.getAbsoluteFile().getParentFile().getAbsolutePath(), "android", "absolute"].execute(null, rootDir).text.trim())
-    cliFile = new File(["node", "--print", "require.resolve('@expo/cli')"].execute(null, rootDir).text.trim())
-    bundleCommand = "export:embed"
 
     /* Autolinking */
     autolinkLibrariesWithApp()
