--- a/.github/workflows/macstadium-ios-e2e.yml
+++ b/.github/workflows/macstadium-ios-e2e.yml
@@ -19,6 +19,19 @@ jobs:
     env:
       ARTIFACTS_FOLDER: e2e-artifacts
     steps:
+      - name: Install jq
+        run: |
+            mkdir -p $HOME/.local/bin
+            curl -L -o $HOME/.local/bin/jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-osx-amd64
+            chmod +x $HOME/.local/bin/jq
+            echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: 'Check jq'
+        # language=sh
+        run: |
+          which jq
+          jq --version
+
       - name: Checkout repo
         uses: actions/checkout@v4
 
@@ -50,34 +63,33 @@ jobs:
           git clone git@github.com:rainbow-me/rainbow-env.git
           mv rainbow-env/dotenv .env && rm -rf rainbow-env
           eval $CI_SCRIPTS
-
-      - run: cd rainbow-scripts && git checkout @janic/rn79
-
+      - name: Checkout Janic branch for now
+        run: cd rainbow-scripts && git checkout @janic/rn79
       - name: Install dependencies
         run: |
           yarn install && yarn setup
 
-      - name: Version debug
+      - name: Modify env
         run: |
-          npx react-native info
+          sed -i'' -e "s/IS_TESTING=false/IS_TESTING=true/" .env && rm -f .env-e
 
       - name: Install pods
         run: |
           rm -rf /Users/administrator/.cocoapods/repos/cocoapods/.git/index.lock
           yarn install-bundle && yarn install-pods
 
-      - uses: irgaly/xcode-cache@v1
+      - name: RNEF Remote Build - iOS simulator
+        id: rnef-remote-build-ios
+        uses: callstackincubator/ios@v1
         with:
-          key: xcode-cache-deriveddata-${{ github.workflow }}-${{ github.sha }}
-          restore-keys: xcode-cache-deriveddata-${{ github.workflow }}-
+          destination: simulator
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          configuration: Debug
+          comment-bot: false
 
       - name: Install Maestro
         run: export MAESTRO_VERSION=1.39.13; curl -fsSL "https://get.maestro.mobile.dev" | bash
 
-      - name: Modify env and build app in release mode
-        run: |
-          sed -i'' -e "s/IS_TESTING=false/IS_TESTING=true/" .env && rm -f .env-e
-          ./scripts/e2e-ios-build.sh
       - uses: futureware-tech/simulator-action@v4
         id: simulator
         with:
