--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -11,7 +11,7 @@ pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin")
 plugins { id("com.facebook.react.settings")
 id("expo-autolinking-settings")
 }
-extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand(expoAutolinking.rnConfigCommand) }
+extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand(['npx', 'rnef', 'config', '-p', 'android']) }
 rootProject.name = 'rainbow'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
