Add experimental `useQuery`

--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "dedent": "0.7.0",
     "delay": "4.4.0",
     "deprecated-react-native-prop-types": "2.2.0",
+    "dequal": "2.0.3",
     "dns.js": "1.0.1",
     "domain-browser": "1.2.0",
     "emoji-datasource": "4.1.0",
@@ -184,6 +185,7 @@
     "imgix-core-js": "2.3.2",
     "immer": "9.0.6",
     "inherits": "2.0.4",
+    "jotai": "2.12.1",
     "lint-staged": "10.4.0",
     "lodash": "4.17.21",
     "make-color-more-chill": "0.2.2",
