--- a/.github/workflows/macstadium-ios-e2e.yml
+++ b/.github/workflows/macstadium-ios-e2e.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   # iOS build and e2e tests
-  e2e-ios:
+  e2e-build-ios:
     if: github.event.pull_request.draft == false
     runs-on: ["self-hosted"]
     concurrency:
@@ -18,6 +18,8 @@ jobs:
     timeout-minutes: 90
     env:
       ARTIFACTS_FOLDER: e2e-artifacts
+    outputs:
+        artifact-id: ${{ steps.rnef-remote-build-ios.outputs.artifact-id }}
     steps:
       - name: Install jq
         run: |
@@ -86,6 +88,31 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           configuration: Debug
           comment-bot: false
+  
+  e2e-ios:
+    needs: e2e-build-ios
+    if: github.event.pull_request.draft == false
+    runs-on: ["self-hosted"]
+    concurrency:
+      group: e2e-ios-${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
+    permissions:
+      contents: read
+    timeout-minutes: 90
+    env:
+      ARTIFACTS_FOLDER: e2e-artifacts
+    steps:
+      - name: Download and Unpack IPA artifact
+        run: |
+            curl -L -H "Authorization: token ${{ github.token }}" -o artifact.zip "https://api.github.com/repos/${{ github.repository }}/actions/artifacts/${{ needs.e2e-build-ios.outputs.artifact-id }}/zip"
+            unzip artifact.zip -d downloaded-artifacts
+            ls -l downloaded-artifacts
+            IPA_PATH=$(find downloaded-artifacts -name "*.ipa" -print -quit)
+            echo "ARTIFACT_PATH_FOR_E2E=$IPA_PATH" >> $GITHUB_ENV
+        shell: bash
+
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
       - name: Install Maestro
         run: export MAESTRO_VERSION=1.39.13; curl -fsSL "https://get.maestro.mobile.dev" | bash
