--- a/.github/workflows/macstadium-ios-e2e.yml
+++ b/.github/workflows/macstadium-ios-e2e.yml
@@ -109,7 +109,8 @@ jobs:
             unzip artifact.zip -d downloaded-artifacts
             ls -l downloaded-artifacts
             IPA_PATH=$(find downloaded-artifacts -name "*.ipa" -print -quit)
-            echo "ARTIFACT_PATH_FOR_E2E=$IPA_PATH" >> $GITHUB_ENV
+            # echo "ARTIFACT_PATH_FOR_E2E=$IPA_PATH" >> $GITHUB_ENV
+            echo "ipa-path=$IPA_PATH" >> $GITHUB_OUTPUT
         shell: bash
 
       - name: Checkout repo
