--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -7,6 +7,7 @@ jobs:
   android-e2e:
     if: github.event.pull_request.draft == false
     runs-on: blacksmith-8vcpu-ubuntu-2404
+    timeout-minutes: 60
     concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
