--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "expo": "51.0.38",
     "expo-image-picker": "15.1.0",
     "expo-store-review": "7.0.2",
+    "expo-web-browser": "~13.0.3",
     "fast-text-encoding": "1.0.4",
     "figma-squircle": "1.1.0",
     "global": "4.4.0",
@@ -231,7 +232,6 @@
     "react-native-get-random-values": "1.5.0",
     "react-native-haptic-feedback": "2.2.0",
     "react-native-image-crop-picker": "0.42.0",
-    "react-native-inappbrowser-reborn": "3.7.0",
     "react-native-indicators": "0.17.0",
     "react-native-ios-context-menu": "1.15.3",
     "react-native-keyboard-area": "1.0.6",
