--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.9.68-1",
   "private": true,
   "scripts": {
-    "setup": "yarn graphql-codegen:install && yarn ds:install && yarn allow-scripts && yarn graphql-codegen && yarn fetch:networks",
+    "setup": "yarn graphql-codegen:install && yarn allow-scripts && yarn graphql-codegen && yarn fetch:networks",
     "setup-ci": "./scripts/setup-ci.sh",
     "adb-all": "adb devices | tail -n +2 | cut -sf 1 | xargs -I {} adb -s {}",
     "android": "yarn uninstall:android && rnef run:android",
