--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -123,6 +123,7 @@ jobs:
         with:
           variant: debug
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          validate-gradle-wrapper: false
 
       - name: Download and Unpack APK artifact
         run: |
