--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "setup": "yarn graphql-codegen:install && yarn allow-scripts && yarn graphql-codegen && yarn fetch:networks",
     "setup-ci": "./scripts/setup-ci.sh",
     "adb-all": "adb devices | tail -n +2 | cut -sf 1 | xargs -I {} adb -s {}",
-    "android": "yarn uninstall:android && rnef run:android",
+    "android": "yarn uninstall:android && rnef run:android --local",
     "android:apk": "yarn gradle assembleRelease && yarn uninstall:android && yarn android:load-apk",
     "android-all:apk": "yarn gradle assembleRelease && yarn uninstall:android && yarn android-all:load-apk",
     "android:bundle": "./scripts/check-env.sh && yarn gradle bundleRelease && open android/app/build/outputs/bundle/release/",
@@ -34,7 +34,7 @@
     "install-pods-fast": "cd ios && bundle exec pod install && cd ..",
     "install-pods-fast-jsc": "cd ios && bundle exec env USE_HERMES=NO pod install && cd ..",
     "install-pods-no-flipper": "cd ios && bundle exec env SKIP_FLIPPER=true pod install --repo-update && cd ..",
-    "ios": "rnef run:ios --scheme Rainbow --configuration Debug",
+    "ios": "rnef run:ios --scheme Rainbow --configuration Debug --local",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "yarn format:check && yarn lint:ts && yarn lint:js",
