--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -124,6 +124,7 @@ jobs:
           variant: debug
           github-token: ${{ secrets.GITHUB_TOKEN }}
           validate-gradle-wrapper: false
+          rnef-build-extra-params: '-PisE2E=true --no-daemon --build-cache --no-scan'
 
       - name: Download and Unpack APK artifact
         run: |
