Make the fiat onboarding links open in a safari web view context (#6662)
* make the links open externally

* okay trying to render in a SFSafariViewController

* swap to expo

* clean up work

* rm ~

* kane fixes

* yarn fast

--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "expo": "51.0.38",
     "expo-image-picker": "15.1.0",
     "expo-store-review": "7.0.2",
+    "expo-web-browser": "13.0.3",
     "fast-text-encoding": "1.0.4",
     "figma-squircle": "1.1.0",
     "global": "4.4.0",
