--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -53,8 +53,8 @@
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustPan">
         <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
-            <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
         </intent-filter>
         <!-- Branch URI Scheme -->
         <intent-filter android:autoVerify="true">
