--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "@legendapp/list": "1.0.0-beta.15",
     "@metamask/eth-sig-util": "7.0.2",
     "@notifee/react-native": "7.8.2",
-    "@rainbow-me/provider": "0.1.2",
+    "@rainbow-me/provider": "file:./rainbow-me-provider-0.1.1.tgz",
     "@rainbow-me/react-native-animated-number": "0.0.2",
     "@rainbow-me/swaps": "0.36.0",
     "@rainbow-me/token-launcher": "0.1.0",
@@ -303,7 +303,7 @@
     "use-debounce": "10.0.0",
     "use-deep-compare": "1.3.0",
     "use-memo-one": "1.1.1",
-    "viem": "2.21.54",
+    "viem": "2.30.6",
     "vm-browserify": "0.0.4",
     "w2t": "3.0.2",
     "zeego": "1.10.0",
