add execution and validation to L1 swaps test (#6636)
* add execution and validation

* malicious dapp flakiness

* retry

* prettier

* use % instead of px

* fix test

* oopsie

* okay this is weird but it makes the button visible

* okay this gets ios passing for now

* clean

* test

--- a/e2e/screens/MaliciousDappTransactionWarning.yaml
+++ b/e2e/screens/MaliciousDappTransactionWarning.yaml
@@ -29,17 +29,18 @@ tags:
             - tapOn: 'Search or enter website'
             - inputText: 'https://bx-test-dapp.vercel.app/'
             - pressKey: enter
-            - assertVisible: 'Test Dapp 🌈'
+            - retry:
+                maxRetries: 3
+                commands:
+                  - assertVisible: '.*Test Dapp.*'
             # tap on wallet pfp to open the control panel
             - tapOn:
                 id: account-icon
             - tapOn:
                 id: connect-button
               # control panel assertions
-            - assertVisible:
-                text: '.*BX Test Dapp.*'
-            - assertVisible:
-                text: 'Disconnect'
+            - assertVisible: '.*Test Dapp.*'
+            - assertVisible: 'Disconnect'
             # tap somewhere arbitrary to close the control panel sheet
             - tapOn:
                 point: 50%,15%
