Add client logs

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
     "lint:js:ci": "eslint --quiet",
     "lint:ts": "yarn tsc --skipLibCheck --noEmit",
     "postinstall": "./scripts/postinstall.sh",
-    "start": "react-native start",
-    "start:clean": "yarn clean:packager && react-native start -- --reset-cache",
+    "start": "react-native start --client-logs",
+    "start:clean": "yarn clean:packager && yarn start --reset-cache",
     "test": "jest --detectOpenHandles --forceExit",
     "ts-coverage": "typescript-coverage-report",
     "ts-migrate-folder": "./scripts/ts-migrate-folder.sh",
