--- a/.github/workflows/macstadium-ios-e2e.yml
+++ b/.github/workflows/macstadium-ios-e2e.yml
@@ -39,7 +39,7 @@ jobs:
             .yarn/cache
             .yarn/install-state.gz
             !.eslintcache # Exclude eslint cache
-          key: ${{ runner.os }}-yarn-${{ github.sha }}  # Cache per commit
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
       - name: Set up ENV vars & scripts
@@ -52,7 +52,7 @@ jobs:
           eval $CI_SCRIPTS
       - name: Install dependencies
         run: |
-          yarn install && yarn setup
+          yarn install && yarn setup:ci
 
       - name: Version debug
         run: |
